# operational-intelligence-platform

./: .gitignore  PROJECT_MAP.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .gitignore  PROJECT_MAP.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app_v2/: config.py  main.py
backend/asset_failure/: .gitignore
backend/docker/: docker-compose.yml
backend/evaluation/: data_understanding_report.csv  eda_summary.csv  feature_dataset_sample.csv  feature_importance.csv  gold_quality_report.txt  hybrid_retrieval_results.csv  rag_pipeline_results.csv  reranking_results.csv  retrieval_dataset_sample.csv  retrieval_ready_sample.csv  sample_rag_response.txt  triage_metrics.csv  triage_report.txt
backend/evaluation_v2/: data_understanding_report_v2.csv  eda_summary_v2.csv  feature_dataset_sample_v2.csv  hybrid_retrieval_results_v2.csv  reranking_results_v2.csv  retrieval_ready_v2_sample.csv
backend/models/: xgb_impact_encoded.json  xgb_priority_encoded.json  xgb_urgency_encoded.json
backend/notebooks/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  03_eda_visualization.ipynb  04_feature_engineering.ipynb  05_retrieval_preparation.ipynb  06_embedding_pipeline.ipynb  07_hybrid_retrieval.ipynb  08_reranking_pipeline.ipynb  08_reranking_pipeline_executed.ipynb  09_rag_generation_pipeline.ipynb  11_gold_ml_dataset_builder.ipynb  evaluation  parquet_exports_v2
backend/tests/: reranking_latency_v2.csv  reranking_results_v2.csv  test_api.py
etl/: .gitignore  PROJECT_MAP.md  README.md  pyproject.toml
etl/airflow/: Dockerfile
(+319 files in other folders)
