[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=4.8.5",
    "evaluate>=0.4",
    "faiss-cpu>=1.8,<2.0",
    "fastapi>=0.136.3",
    "groq>=0.12",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=5.22",
    "pyarrow>=15",
    "ragas>=0.2.6,<0.3",
    "rank-bm25==0.2.2",
    "scikit-learn>=1.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0,<4.0",
    "sqlalchemy>=2.0",
    "sqlite-utils>=3.36",
    "torch>=2.12.0",
    "tqdm>=4.66",
    "transformers>=4.57.6",
    "uvicorn>=0.48.0",
]
