[project]
name = "pfe-bachelor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-mysql>=1.7.0",
    "faiss-cpu==1.8.0",
    "fastapi==0.111.0",
    "groq==0.9.0",
    "lightgbm==4.3.0",
    "llama-index==0.10.40",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "pymysql>=1.2.0",
    "ragas>=0.2.6",
    "rank-bm25==0.2.2",
    "scikit-learn==1.5.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy==2.0.30",
    "uvicorn==0.29.0",
    "xgboost==2.0.3",
]
